--- a/src/app/pages/login/login/login.component.html
+++ b/src/app/pages/login/login/login.component.html
@@ -1,21 +1,23 @@
-<div class="container">
-  <h2>Login</h2>
-  <form (ngSubmit)="loginUser()" #loginForm="ngForm">
-    <div class="form-group">
-      <label for="email">E-Mail</label>
-      <input type="email" id="email" [(ngModel)]="email" name="email" required>
-      <span class="error" *ngIf="emailError">{{ emailError }}</span>
-    </div>
-    <div class="form-group">
-      <label for="password">Passwort</label>
-      <input type="password" id="password" [(ngModel)]="password" name="password" required>
-      <span class="error" *ngIf="passwordError">{{ passwordError }}</span>
-    </div>
-    <div class="remember-me">
-      <label for="rememberMe">Angemeldet bleiben</label>
-      <input type="checkbox" id="rememberMe" [(ngModel)]="rememberMe" name="rememberMe">
-    </div>
-    <button type="submit">Login</button>
-  </form>
-  <p class="link-text">Noch keinen Account? <a routerLink="/register">Jetzt registrieren</a></p>
+<div class="login-wrapper">
+  <div class="container">
+    <h2>Login</h2>
+    <form (ngSubmit)="loginUser()" #loginForm="ngForm">
+      <div class="form-group">
+        <label for="email">E-Mail</label>
+        <input type="email" id="email" [(ngModel)]="email" name="email" required>
+        <span class="error" *ngIf="emailError">{{ emailError }}</span>
+      </div>
+      <div class="form-group">
+        <label for="password">Passwort</label>
+        <input type="password" id="password" [(ngModel)]="password" name="password" required>
+        <span class="error" *ngIf="passwordError">{{ passwordError }}</span>
+      </div>
+      <div class="remember-me">
+        <input type="checkbox" id="rememberMe" [(ngModel)]="rememberMe" name="rememberMe">
+        <label for="rememberMe">Angemeldet bleiben</label>
+      </div>
+      <button type="submit">Login</button>
+    </form>
+    <p class="link-text">Noch keinen Account? <a routerLink="/register">Jetzt registrieren</a></p>
+  </div>
 </div>
