--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,4 +1,3 @@
-<!-- home.component.html -->
 <div class="container">
   <h2>Hallo {{ username }}!</h2>
   <p>Überwache deine Felder!</p>
@@ -19,8 +18,11 @@
   <div class="sensor-changes">
     <h3>Letzte Sensor Änderungen:</h3>
     <div *ngFor="let change of sensorChanges" class="sensor-item">
-      <p><strong>{{ change.sensorName }}</strong></p>
-      <p>{{ change.description }}</p>
+      <div class="sensor-icon">{{ change.sensorName }}</div>
+      <div class="sensor-info">
+        <p><strong>{{ change.description }}</strong></p>
+        <p class="sensor-value">--> {{ change.value }}</p>
+      </div>
     </div>
   </div>
 </div>
