--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -1,37 +1,45 @@
-/* Navigationselemente im Footer */
+/* Footer-Grunddesign */
 .footer-nav {
-  position: fixed;  /* Fixiert den Footer am Bildschirm */
-  bottom: 0;        /* Stellt sicher, dass der Footer am unteren Rand des Bildschirms bleibt */
-  width: 100%;      /* Der Footer nimmt die gesamte Breite des Bildschirms ein */
-  background-color: #f4f4f4;
-  padding: 10px 0;
-  text-align: center;
-  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);  /* Optionaler Schatten für den Footer */
-  z-index: 1000;    /* Stellt sicher, dass der Footer über anderen Inhalten bleibt */
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  background-color: white;
+  border-top: 2px solid #F5F5DC;
 }
 
-/* Stil für jedes Navigationselement */
+/* Stil für Navigationselemente */
 .nav-item {
+  flex: 1;
   text-align: center;
-  padding: 5px;
+  padding: 15px 0;
+  font-size: 14px;
+  color: grey;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease-in-out;
 }
 
+/* Icons */
 .nav-item .icon {
-  font-size: 24px;
   display: block;
+  font-size: 22px;
+  margin-bottom: 5px;
 }
 
-.nav-item p {
-  font-size: 12px;
-  margin-top: 5px;
-  color: #333;
+/* Linien zwischen den Elementen */
+.nav-item:not(:last-child) {
+  border-right: 2px solid #F5F5DC;
 }
 
-/* Hover-Effekt für die Navigationselemente */
-.footer-nav .nav-item:hover {
-  background-color: #e0e0e0;
-  border-radius: 5px;
+/* Hover Effekt */
+.nav-item:hover {
+  background-color: white;
+  cursor: pointer;
+}
+
+/* Aktives Element */
+.nav-item.active {
+  background-color: #F5F5DC;
+  color: grey;
 }
