--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,14 +1,23 @@
 <div class="footer-nav">
-  <div class="nav-item" [routerLink]="'/'">
+  <div class="nav-item" [routerLink]="'/'" [class.active]="currentRoute === '/'">
     <span class="icon">🏠</span>
     <p>Startseite</p>
   </div>
-  <div class="nav-item" [routerLink]="'/dashboard'">
+  <div class="nav-item" [routerLink]="'/dashboard'" [class.active]="currentRoute === '/dashboard'">
     <span class="icon">📊</span>
     <p>Dashboard</p>
   </div>
-  <div class="nav-item" [routerLink]="'/settings'">
+  <div class="nav-item" [routerLink]="'/settings'" [class.active]="currentRoute === '/settings'">
     <span class="icon">⚙️</span>
     <p>Einstellungen</p>
   </div>
 </div>
+
+<!--
+<div class="row no-gutters social-container">
+  <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-facebook"></span><span>Facebook</span></a></div>
+  <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-instagram"></span><span>Instagram</span></a></div>
+  <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-twitter"></span><span>Twitter</span></a></div>
+  <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-youtube-play"></span><span>Youtube</span></a></div>
+</div>
+-->
