--- a/src/app/pages/dashboard/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.css
@@ -43,3 +43,17 @@ header {
 .dark-mode header {
   background: linear-gradient(90deg, #2a2a2a, purple);
 }
+
+canvas {
+  max-width: 100%;
+  max-height: 400px;
+}
+
+.status-indicator {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  margin-right: 10px;
+  background-color: gray;
+  transition: background-color 0.3s ease-in-out;
+}
