--- a/src/app/pages/dashboard/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.css
@@ -21,7 +21,7 @@ header {
   align-items: center;
 }
 
-.grid-item button {
+button {
   margin: 5px;
   padding: 8px 12px;
   background-color: #2196f3;
@@ -31,7 +31,7 @@ header {
   cursor: pointer;
 }
 
-.grid-item button:hover {
+button:hover {
   background-color: #1976d2;
 }
 
@@ -45,15 +45,47 @@ header {
 }
 
 canvas {
+  display: block;
   max-width: 100%;
-  max-height: 400px;
+  max-height: 200px;
+}
+
+.sensor-controls{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.field-group {
+  margin-bottom: 20px;
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 10px;
+}
+
+.field-title {
+  font-size: 1.5rem;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sensor-container {
+  padding-left: 15px;
+}
+
+.sensor-item {
+  background: #f8f9fa;
+  padding: 10px;
+  border-radius: 8px;
+  margin: 5px 0;
 }
 
 .status-indicator {
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  margin-right: 10px;
   background-color: gray;
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease;
 }
