--- a/src/app/pages/dashboard/dashboard/sensor-group/sensor-group.component.html
+++ b/src/app/pages/dashboard/dashboard/sensor-group/sensor-group.component.html
@@ -27,6 +27,7 @@
             {{ msg.text }} ({{ msg.date }})
           </li>
         </ul>
+        <button (click)="deleteSensorMessage(sensor)">Meldungen löschen</button>
       </div>
     </div>
   </div>
