--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -2,17 +2,17 @@
   <h2>Hallo {{ username }}!</h2>
   <p>Überwache deine Felder!</p>
 
-  <div class="button-group">
-    <button (click)="navigate('/sensors')">Sensor Überblick</button>
-    <button (click)="navigate('/sensorgroup')">Sensor Gruppen</button>
-    <button (click)="navigate('/messages')">Datenexporte</button>
-  </div>
-
-  <div class="alert-box" *ngIf="messages">
+  <div class="alert-box">
     <h3>Wichtige Meldungen:</h3>
-    <p><strong>{{ messages.title }}</strong></p>
-    <p>{{ messages.description }}</p>
-    <button (click)="navigate('/messages')">Alle Benachrichtigungen</button>
+    <div *ngIf="messages.length === 0">
+      <p>Keine Meldungen vorhanden.</p>
+    </div>
+    <div *ngFor="let message of messages" class="message-item">
+      <p><strong>{{ message.title }}</strong></p>
+      <p>{{ message.description }}</p>
+      <p *ngIf="message.fieldName">{{ message.fieldName }}</p>
+    </div>
+    <button (click)="navigate('/messages')" class="all-notifications">Alle Benachrichtigungen</button>
   </div>
 
   <div class="sensor-changes">
@@ -22,6 +22,8 @@
       <div class="sensor-info">
         <p><strong>{{ change.description }}</strong></p>
         <p class="sensor-value">--> {{ change.value }}</p>
+        <p class="sensor-status" *ngIf="!change.isActive">Sensor inaktiv</p>
+        <p class="sensor-timestamp">Letzte Aktualisierung: {{ change.timestamp || 'Unbekannt' }}</p>
       </div>
     </div>
   </div>
