--- a/src/app/pages/login/login/login.component.html
+++ b/src/app/pages/login/login/login.component.html
@@ -18,6 +18,7 @@
       </div>
       <button type="submit">Login</button>
     </form>
+    <div class="link-text" [routerLink]="'/register'" [class.active]="currentRoute === '/register'"></div>
     <p class="link-text">Noch keinen Account? <a routerLink="/register">Jetzt registrieren</a></p>
   </div>
 </div>
