--- a/src/app/pages/dashboard/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.css
@@ -133,6 +133,19 @@ canvas {
   border-radius: 5px;
 }
 
+
+.info-icon {
+  cursor: help;
+  margin-left: 4px;
+  font-size: 0.9rem;
+  opacity: 0.8;
+  background: #f1f1f1;
+}
+
+.info-icon:hover {
+  opacity: 1;
+}
+
 .search-bar button {
   margin-left: 5px;
   padding: 8px;
