--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Hallo {{ username }}!</h2>
+  <h2>Hallo <span class="username">{{ username }}</span>!</h2>
   <p>Überwache deine Felder!</p>
 
   <div class="alert-box">
